fix overflow issues

--- a/styles/index.less
+++ b/styles/index.less
@@ -25,8 +25,7 @@ body {
 
 #app {
     background-color: @baseGreen;
-    height: 100%;
-    overflow: auto;
+    min-height: 100%;
     max-width: 600px;
     margin: 0 auto;
 }
